--- a/home-page/index.html
+++ b/home-page/index.html
@@ -66,32 +66,32 @@
 
 <!-- DETALII CURS END -->
 
-    <!-- START HEADER -->
-    <header  id="home" class="home-header">
-        <!-- <div class="">
-            <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
-        </div> -->
-        <div class="container take-action-message">
-            <h1 class="textClass text-center home-main-header"></h1>
-            <p class="home-main-sub-header">Vino la cursurile noastre sa invatam impreuna.</p>
-        </div>
-        <div class="detalii-curs-button-container">
-            <button type="button" class="btn enroll-header-btn">
-                <a class="btn-lg" href="#cursuri">ÎNSCRIE-TE</a>
-            </button>
-        </div>
-    </header>
+<!-- START HEADER -->
+<header id="home" class="home-header">
+    <!-- <div class="">
+        <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
+    </div> -->
+    <div class="container take-action-message">
+        <h1 class="textClass text-center home-main-header"></h1>
+        <p class="home-main-sub-header">Vino la cursurile noastre sa invatam impreuna.</p>
+    </div>
+    <div class="detalii-curs-button-container">
+        <button type="button" class="btn enroll-header-btn">
+            <a class="btn-lg" href="#cursuri">ÎNSCRIE-TE</a>
+        </button>
+    </div>
+</header>
 
 
 <!-- END HEADER -->
 
 
-    <div class="section section-home-curs" id="cursuri">
-        <div class="container course">
-            <h1 class="text-center home-main-header courseHeader">Vino sa înveți:</h1>
-            <div class=" course course1"></div>
-        </div>
+<div class="section section-home-curs" id="cursuri">
+    <div class="container course">
+        <h1 class="text-center home-main-header courseHeader">Vino sa înveți:</h1>
+        <div class=" course course1"></div>
     </div>
+</div>
 <!-- SECTIUNE CURSURI END -->
 
 <!-- SECTIUNE DESPRE NOI START -->
@@ -132,45 +132,36 @@
 <!-- SECTIUNE TRAINER START-->
 
 <div class="section section-home-trainer">
-        <div class="container">
-                <h1 class="text-center home-main-header">Cu cine vei colabora?</h1>
-                <div class="card-deck">
-                    <div class="card pricing">
-                        <div class="card-head">
-                            <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
-                        </div>
-                        <blockquote class="blockquote trainerIon"></blockquote>
-                        <ul class="list-group list-group-flush">
-                            <h5 class="mt-4 mb-2 text-center">Păușan Ionuț</h5>
-                            <a class="linkedin-icon-container" target="_blank" href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/" > 
-
-                                <i class="fab fa-linkedin"></i>
-
-                            </a>
-                        </ul>
-                    </div>
-                    <div class="card pricing">
-                            <div class="card-head">
-                                <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
-                            </div>
-                            <blockquote class="blockquote trainerCata"></blockquote>
-                            <ul class="list-group list-group-flush">
-                                <h5 class="mt-4 mb-2 text-center">Roșu Cătălin</h5>
-                                <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="linkedin-icon-container">
-
-                                     <i class="fab fa-linkedin"></i>
-                                    </a>
-                            </ul>
-                        </div>
+    <div class="container">
+        <h1 class="text-center home-main-header">Cu cine vei colabora?</h1>
+        <div class="card-deck">
+            <div class="card pricing">
+                <div class="card-head">
+                    <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136"
+                         height="136">
                 </div>
-                <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives.
-                    Conveniently embrace multifunctional ideas through proactive customer service. Distinctively
-                    conceptualize 2.0 intellectual capital via user-centric partnerships.
-                </blockquote>
+                <blockquote class="blockquote trainerIon"></blockquote>
+                <ul class="list-group list-group-flush">
+                    <h5 class="mt-4 mb-2 text-center">Păușan Ionuț</h5>
+                    <a class="linkedin-icon-container" target="_blank"
+                       href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/">
+
+                        <i class="fab fa-linkedin"></i>
+
+                    </a>
+                </ul>
+            </div>
+            <div class="card pricing">
+                <div class="card-head">
+                    <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136"
+                         height="136">
+                </div>
+                <blockquote class="blockquote trainerCata"></blockquote>
                 <ul class="list-group list-group-flush">
                     <h5 class="mt-4 mb-2 text-center">Roșu Cătălin</h5>
                     <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/"
                        class="linkedin-icon-container">
+
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </ul>
@@ -196,25 +187,45 @@
                 </p>
                 <div class="social-media-icons">
 
-            <a href="https://www.facebook.com/Speak-programming-1995720327193287/">     <i class="fab fa-facebook-square"></i> </a>
+                    <a href="https://www.facebook.com/Speak-programming-1995720327193287/"> <i
+                            class="fab fa-facebook-square"></i> </a>
                 </div>
             </div>
+
+            <div id="contact" class="contact-form">
+                <h1>Email us:</h1>
+                <label for="email">Email:</label>
+                <input id="email" type="text" name="email" value=""
+                       class="form-control input-lg input-space email-input"
+                       placeholder="Your Email"/>
+                <p class="email-after-submit"></p>
+
+                <label for="mesaj">Scrie-ne un mesaj:</label>
+                <textarea id="mesaj" type="text" name="mesaj" value=""
+                          class="input-space form-control input-lg mesaj-input"
+                          placeholder="Mesaj..."/></textarea>
+                <p class="message-after-submit"></p>
+                <button class="btn submit-button-footer">Submit</button>
+            </div>
         </div>
+        <p class="copyright-message text-center">
+            <small>COPYRIGHT © 2019. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small>
+        </p>
     </div>
 </footer>
 
 
-        <!-- SCRIPT SECTION -->
-        <script src="../js/jquery-3.2.1.min.js"></script>
-        <script src="../js/bootstrap.bundle.min.js"></script>
+<!-- SCRIPT SECTION -->
+<script src="../js/jquery-3.2.1.min.js"></script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 
-        <script src="../js/app.config.js"></script>
-        <script src="../js/makeRekuest.js"></script>
-        <script src="../js/createBodyRequest.js"></script>
-        <script src="./js/home-service.js"></script>
-        <script src="../detaliiCurs/js/detalii-curs-service.js"></script>
-        <script src="./js/home-ui.js"></script>
-        <script src ="../detaliiCurs/js/formValidation.js"></script>
-        <script src="./js/home.js"></script>
-    </body>
+<script src="../js/app.config.js"></script>
+<script src="../js/makeRekuest.js"></script>
+<script src="../js/createBodyRequest.js"></script>
+<script src="./js/home-service.js"></script>
+<script src="../detaliiCurs/js/detalii-curs-service.js"></script>
+<script src="./js/home-ui.js"></script>
+<script src="../detaliiCurs/js/formValidation.js"></script>
+<script src="./js/home.js"></script>
+</body>
 </html>
